fix: лучшебы я туда не лез

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -5,16 +5,24 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(lanchat_server
-  src/main.cpp
-  src/config.cpp
-  src/hash.cpp
-  src/protocol.cpp
-  src/storage.cpp
-  src/server.cpp
-  src/crypto.cpp
+  src/app/main.cpp
+  src/config/config.cpp
+  src/crypto/crypto.cpp
+  src/hash/hash.cpp
+  src/net/protocol.cpp
+  src/net/server.cpp
+  src/storage/storage.cpp        # <-- ВАЖНО!
 )
 
-target_include_directories(lanchat_server PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
+target_include_directories(lanchat_server PRIVATE
+  ${CMAKE_CURRENT_SOURCE_DIR}/src
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/util
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/config
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/net
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/storage
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/hash
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/crypto
+)
 
 if (WIN32)
   target_compile_definitions(lanchat_server PRIVATE _WIN32_WINNT=0x0601)
