--- a/defay-client/Cargo.toml
+++ b/defay-client/Cargo.toml
@@ -29,6 +29,7 @@ dioxus-desktop = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 directories = "5.0"
+dark-light = "1.1"
 
 # Логирование и телеметрия
 tracing = "0.1"
